--- a/src/main/java/lapr4/blue/s2/ipc/n1141233/importexportlink/ui/ImportLinkUI.form
+++ b/src/main/java/lapr4/blue/s2/ipc/n1141233/importexportlink/ui/ImportLinkUI.form
@@ -30,14 +30,10 @@
                           <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="nameTextFile" min="-2" pref="229" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="btnFindTextFile" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="checkHeader" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="nameTextFile" min="-2" pref="229" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="btnFindTextFile" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="179" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="209" max="-2" attributes="0"/>
@@ -79,14 +75,12 @@
                   <Component id="nameTextFile" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                   <Component id="btnFindTextFile" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-              <Component id="checkHeader" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnImport" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnCancel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -124,11 +118,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFindTextFileActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="checkHeader">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="First line of the text file should be treated as containing the header of the columns"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnImport">
       <Properties>
