--- a/src/main/java/lapr4/green/s1/ipc/n1970581/findworkbook/ui/SearchWorkbookPanel.form
+++ b/src/main/java/lapr4/green/s1/ipc/n1970581/findworkbook/ui/SearchWorkbookPanel.form
@@ -34,12 +34,15 @@
                   <Group type="102" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="182" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jButtonOpen" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="PreviewWorkbookButton" max="32767" attributes="0"/>
+                          <Component id="jButtonOpen" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jButtonRoot" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jTextFieldRoot" pref="232" max="32767" attributes="0"/>
+                      <Component id="jTextFieldRoot" pref="215" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonSearch" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -60,6 +63,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="PreviewWorkbookButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonOpen" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -123,5 +128,14 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="PreviewWorkbookButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Preview"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PreviewWorkbookButtonActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
