--- a/src/main/java/lapr4/green/s2/core/n1151211/CompanyContact/ui/PersonalContactDialog.form
+++ b/src/main/java/lapr4/green/s2/core/n1151211/CompanyContact/ui/PersonalContactDialog.form
@@ -108,7 +108,6 @@
                       <Component id="photo" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="selectPhoto" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="related" min="-2" pref="58" max="-2" attributes="0"/>
@@ -119,9 +118,9 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="buttonRight" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="buttonLeft" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
+                  <Component id="buttonRight" min="-2" pref="42" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
           </Group>
